* Wed Sep 16 2020 Liz Nemsick <lnemsick.simp@gmail.com> - 0.4.2-0
- Advertise OEL8 support in the metadata.json.

* Wed May 13 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.4.1-0
- Ensure that EL8 updates trigger updating the global system crypto policy since
  some subsystems now ignore the local configuration by default.

* Tue Dec 10 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.4.0-0
- Add EL8 support
- Add REFERENCE.md

* Thu Jun 06 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 0.3.0-0
- Add v2 compliance_markup data

* Thu Mar 28 2019 Jim Anderson <thesemicolons@protonmail.com> - 0.2.2-0
- Moved code for defining $aesni from params.pp to init.pp

* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.2.1-0
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Thu Oct 11 2018 Nick Miller <nick.miller@onyxpoint.com> - 0.2.0-0
- Added $dracut_ensure, $fipscheck_ensure and $nss_ensure parameters
  - Changed the packages from 'latest' to 'installed'
  - It will also respect `simp_options::package_ensure`
- Update badges and contribution guide URL in the README.md

* Thu Jul 12 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.2.0-0
- Added support for OEL and Puppet 5
- Add a message to the reboot_notify resource to be more helpful

* Mon Feb 26 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.4-0
- Updated testing configurations including GCE suite information,
 .travis.yml and .gitab-ci.yml.

* Sat Sep 30 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.3-0
- Updated to latest augeasproviders_grub version.  New module
  had no functionality impacts.

* Fri May 12 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.1.2-0
- Including the FIPS module was causing FIPS mode to be enabled by default.
  This had high potential for causing issues, as evidenced by our acceptance
  tests, so we now mirror the 'enabled' state of the module based on whether or
  not FIPS is already enabled on the target system.